--- a/views/filter.ejs
+++ b/views/filter.ejs
@@ -1,5 +1,5 @@
 <% include partials/headers/matchHeader %>
-        <form action="matches">
+        <form class="mainform" action="matches">
                         <fieldset>
                            <legend>Filter op:</legend>
                            <label>Afstand&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;km</label>
