--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -1,7 +1,7 @@
 <% include partials/headers/matchHeader %>
         <div class="container">
             <div class="matches">
-                <a href="matchprofile"><img src="images/indi.jpeg"></a>
+                <a href="matchprofile"><img src="images/avatars/indi.jpeg"></a>
                     <div class="avatarhead">
                         <h3>Stephan, 23</h3>
                         <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
@@ -9,7 +9,7 @@
                 </div>
 
                 <div class="matches">
-                        <a href="chataccept"><img src="images/tony.jpg"></a>
+                        <a href="chataccept"><img src="images/avatars/tony.jpg"></a>
                         <div class="avatarhead">
                             <h3>Karel, 22</h3>
                             <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
@@ -17,49 +17,49 @@
                     </div>
 
                     <div class="matches">
-                        <img src="images/cap.png">
+                        <img src="images/avatars/cap.png">
                             <div class="avatarhead">
                                 <h3>Jurgen, 25</h3>
                                 <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                             </div>
                         </div>
                     <div class="matches">
-                        <img src="images/cap.png">
+                        <img src="images/avatars/cap.png">
                             <div class="avatarhead">
                                 <h3>Erwin, 25</h3>
                                 <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                             </div>
                         </div>
                         <div class="matches">
-                            <img src="images/cap.png">
+                            <img src="images/avatars/tony.jpg">
                                 <div class="avatarhead">
                                     <h3>Steven, 26</h3>
                                     <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                                 </div>
                             </div>
                             <div class="matches">
-                                <img src="images/cap.png">
+                                <img src="images/avatars/thor.jpeg">
                                     <div class="avatarhead">
                                         <h3>Oscar, 20</h3>
                                         <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                                     </div>
                                 </div>
                                 <div class="matches">
-                                    <img src="images/cap.png">
+                                    <img src="images/avatars/indi.jpeg">
                                         <div class="avatarhead">
                                             <h3>Richard, 22</h3>
                                             <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                                         </div>
                                     </div>
                                     <div class="matches">
-                                        <img src="images/cap.png">
+                                        <img src="images/avatars/cap.png">
                                             <div class="avatarhead">
                                                 <h3>Rick, 21</h3>
                                                 <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                                             </div>
                                         </div>
                                         <div class="matches">
-                                            <img src="images/cap.png">
+                                            <img src="images/avatars/thor.jpeg">
                                                 <div class="avatarhead">
                                                     <h3>Nick, 27</h3>
                                                     <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
