--- a/views/partials/headers/matchHeader.ejs
+++ b/views/partials/headers/matchHeader.ejs
@@ -12,7 +12,7 @@
     <body>
         <div class="backgroundimage"></div>
         <header>
-                <a href="/"><img src="images/Logo/SVG/natelogo.svg"></a>
+                <a href="logout"><img src="images/Logo/SVG/natelogout.svg"></a>
                 <h1>Match</h1>
                 <a href="filter"><img src="images/Logo/SVG/nateFilter.svg"></a>
         </header>
