--- a/views/partials/mainLogin.ejs
+++ b/views/partials/mainLogin.ejs
@@ -1,8 +1,8 @@
 
-    <form action="matches">
+    <form class="mainform" action="index" method="POST">
         <h2>Aanmelden</h2>
-        <input type="text" placeholder="gebruikersnaam">
-        <input type="password" placeholder="wachtwoord">
+        <input type="Email" name="email" placeholder="Email">
+        <input type="password" name="password" placeholder="Wachtwoord">
         <input type="submit">
         <a href="../registration">Of registreer nu een account</a>
     </form>
