--- a/views/avatar.ejs
+++ b/views/avatar.ejs
@@ -1,27 +1,17 @@
 <% include partials/headers/registrationHeader %>
-  <div class="container">
-            <div class="matches">
-                <a href="completion"><img src="images/indi.jpeg"></a>
-                    <div class="avatarhead">
-                        <h3>Indiana Jones</h3>
-                        <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
-                    </div>
-                </div>
 
-                <div class="matches">
-                    <img src="images/tony.jpg">
-                        <div class="avatarhead">
-                            <h3>Tony stark</h3>
-                            <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
-                        </div>
-                    </div>
-
-                    <div class="matches">
-                        <img src="images/cap.png">
-                            <div class="avatarhead">
-                                <h3>captain america</h3>
-                                <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
-                            </div>
-                        </div>
-                    </div>
-<% include partials/footer %>
+<div class="container">
+    <% for (var i=0; i < Object.keys(totalAvatarChoices).length; i++) { %>
+    <form id="avatarmatches" action='avatar' method='POST'>
+        <div class="avatarmatches">
+            <a href="completion"></a><img src=<%= totalAvatarChoices[i].img %>></a>
+            <div class="avatarhead">
+                <input id="avatarbutton" type="submit" name="choice" value="<%=totalAvatarChoices[i].name%>">
+                <p> <%=totalAvatarChoices[i].trait1%>
+                    <%=totalAvatarChoices[i].trait2%>
+                    <%=totalAvatarChoices[i].trait3%></p>
+            </div>
+        </div>
+    </form>
+    <% } %>
+    <% include partials/footer %>
