--- a/views/partials/headers/logoutHeader.ejs
+++ b/views/partials/headers/logoutHeader.ejs
@@ -12,7 +12,7 @@
     <body>
         <div class="backgroundimage"></div>
         <header>
-                <a href="/"><img src="images/Logo/SVG/nateLogout.svg"></a>
+                <a href="logout"><img src="images/Logo/SVG/nateLogout.svg"></a>
                 <h1>Profiel</h1>
                 <a href="matches"><img src="images/Logo/SVG/chat.svg"></a>
         </header>
