--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,4 @@
 
-        
-<!-- <script src="../../static/main.js" async defer></script> -->
-<script src="/index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
