added new avatars and some project files + comments in index.js

--- a/views/matchafter.ejs
+++ b/views/matchafter.ejs
@@ -1,7 +1,7 @@
 <% include partials/headers/matchHeader %>
         <div class="container">
             <div class="matches">
-                <a href="matchprofile"><img src="images/profile.jpg"></a>
+                <a href="matchprofile"><img src="images/avatars/profile.jpg"></a>
                     <div class="avatarhead">
                         <h3>Indiana Jones</h3>
                         <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
@@ -9,7 +9,7 @@
                 </div>
 
                 <div class="matches">
-                    <img src="images/tony.jpg">
+                    <img src="images/avatars/tony.jpg">
                         <div class="avatarhead">
                             <h3>Tony stark</h3>
                             <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
@@ -17,49 +17,49 @@
                     </div>
 
                     <div class="matches">
-                        <img src="images/cap.png">
+                        <img src="images/avatars/cap.png">
                             <div class="avatarhead">
                                 <h3>captain america</h3>
                                 <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                             </div>
                         </div>
                     <div class="matches">
-                        <img src="images/cap.png">
+                        <img src="images/avatars/cap.png">
                             <div class="avatarhead">
                                 <h3>captain america</h3>
                                 <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                             </div>
                         </div>
                         <div class="matches">
-                            <img src="images/cap.png">
+                            <img src="images/avatars/cap.png">
                                 <div class="avatarhead">
                                     <h3>captain america</h3>
                                     <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                                 </div>
                             </div>
                             <div class="matches">
-                                <img src="images/cap.png">
+                                <img src="images/avatars/cap.png">
                                     <div class="avatarhead">
                                         <h3>captain america</h3>
                                         <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                                     </div>
                                 </div>
                                 <div class="matches">
-                                    <img src="images/cap.png">
+                                    <img src="images/avatars/cap.png">
                                         <div class="avatarhead">
                                             <h3>captain america</h3>
                                             <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                                         </div>
                                     </div>
                                     <div class="matches">
-                                        <img src="images/cap.png">
+                                        <img src="images/avatars/cap.png">
                                             <div class="avatarhead">
                                                 <h3>captain america</h3>
                                                 <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                                             </div>
                                         </div>
                                         <div class="matches">
-                                            <img src="images/cap.png">
+                                            <img src="images/avatars/cap.png">
                                                 <div class="avatarhead">
                                                     <h3>captain america</h3>
                                                     <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
