--- a/views/matchprofile.ejs
+++ b/views/matchprofile.ejs
@@ -1,6 +1,6 @@
 <% include partials/headers/matchHeader %>
         <div class="profileimage">
-            <img src="images/indi.jpeg">
+            <img src="images/avatars/indi.jpeg">
         </div>
         <div class="description">
             <h1>Indiana Jones, 23</h1>
