--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,11 +1,11 @@
 <% include partials/headers/chatheader %>
         <div class="chatlinks">
-            <a href="matchprofile.html"><img src="images/indi.jpeg"></a>
+            <a href="matchprofile.html"><img src="images/avatars/indi.jpeg"></a>
             <p>Hi! Ik ben stephan, leuk om kennis te maken!</p>
         </div>
 
         <div class="chatrechts">
-            <img src="images/tony.jpg">
+            <img src="images/avatars/tony.jpg">
             <p>Hi! Ik ben Judith, wat leuk dat je me een berichtje stuurt!</p>
         </div>
 
