--- a/views/request.ejs
+++ b/views/request.ejs
@@ -6,7 +6,7 @@
                 Deze persoon krijgt hier een melding van.</p>
         </section>
         <div class="requestprofileimage">
-            <img src="images/indi.jpeg">
+            <img src="images/avatars/indi.jpeg">
             <div class="description">
             <h1>Toestemming vereist:</h1>
             <p>Indiana Jones moet toestemming geven voordat jij haar echte profielfoto kan zien.</p>
