--- a/views/requestsend.ejs
+++ b/views/requestsend.ejs
@@ -4,7 +4,7 @@
             <p>De request is verstuurd naar Indiana Jones, 23! Je wordt teruggestuurd naar de matches pagina.</p>
         </section>
         <div class="requestprofileimage">
-            <img src="images/indi.jpeg">
+            <img src="images/avatars/indi.jpeg">
             <div class="description">
             <h1>Toestemming vereist:</h1>
             <p>Indiana Jones moet toestemming geven voordat jij haar echte profielfoto kan zien.</p>
