--- a/views/avatar.ejs
+++ b/views/avatar.ejs
@@ -1,15 +1,15 @@
 <% include partials/headers/registrationHeader %>
 
 <div class="container">
-    <% for (var i=0; i < Object.keys(totalAvatarChoices).length; i++) { %>
+    <% for (var i=0; i < Object.keys(req.session.totalAvatarChoices).length; i++) { %>
     <form id="avatarmatches" action='avatar' method='POST'>
         <div class="avatarmatches">
-            <a href="completion"></a><img src=<%= totalAvatarChoices[i].img %>></a>
+            <a href="completion"></a><img src=<%= req.session.totalAvatarChoices[i].img %>></a>
             <div class="avatarhead">
-                <input id="avatarbutton" type="submit" name="choice" value="<%=totalAvatarChoices[i].name%>">
-                <p> <%=totalAvatarChoices[i].trait1%>
-                    <%=totalAvatarChoices[i].trait2%>
-                    <%=totalAvatarChoices[i].trait3%></p>
+                <input id="avatarbutton" type="submit" name="choice" value="<%=req.session.totalAvatarChoices[i].name%>">
+                <p> <%=req.session.totalAvatarChoices[i].trait1%>
+                    <%=req.session.totalAvatarChoices[i].trait2%>
+                    <%=req.session.totalAvatarChoices[i].trait3%></p>
             </div>
         </div>
     </form>
